testdata/baselines/reference/submodule/conformance/varRequireFromTypescript.errors.txt
use.js(1,10): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== use.js (1 errors) ====
    var ex = require('./ex')
             ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    // values work
    var crunch = new ex.Crunch(1);
    crunch.n
    
    
    // types work
    /**
     * @param {ex.Greatest} greatest
     * @param {ex.Crunch} wrap
     */
    function f(greatest, wrap) {
        greatest.day
        wrap.n
    }
    
==== ex.d.ts (0 errors) ====
    export type Greatest = { day: 1 }
    export class Crunch {
        n: number
        m(): number
        constructor(n: number)
    }
    